Add gallery button linking to galery.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>💌 365 Motivos para te Amar 💌</h1>
         <div id="motivo" class="motivo-texto">Clique no botão para ver o motivo de hoje 💕</div>
         <button id="mostrar">Ver motivo de hoje 💖</button>
+        <button id="galeria"><a href="galery.html">Ver Galeria 💖</a></button>
     </div>
 
     <script src="script.js"></script>
